# ShopAIAssist-pilot

./: README.md
shopaiassist-app-ai-assistance-mfe/: .eslintrc.js  .gitignore  example.env  package-lock.json
shopaiassist-app-ai-assistance-mfe/.husky/: pre-commit
shopaiassist-app-ai-assistant-service/: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .python-package-template  CHANGELOG.md  CONTRIBUTING.md  DEVELOPERS.md  README.md  mypy.ini  poetry.toml  pyproject.toml  pytest.ini
shopaiassist-app-ai-assistant-service/.github/: CODEOWNERS
shopaiassist-app-ai-assistant-service/.github/workflows/: push-workflow.yml  snyk-daily-scan.yml
shopaiassist-app-ai-assistant-service/configs/: __init__.py
shopaiassist-app-ai-assistant-service/db/liquibase/: README.md  initial_liquibase_sql.xml  liquibase.properties  liquibase_update_sql_v1.xml  liquibase_update_sql_v2.xml
shopaiassist-app-ai-assistant-service/db/sql/initial/: db_update_v1.sql  db_update_v2.sql  initial.sql
shopaiassist-app-ai-assistant-service/docker/: Dockerfile
shopaiassist-app-ai-assistant-service/docs/: README.md  index.html
shopaiassist-app-ai-assistant-service/reports/: README.md
shopaiassist-app-ai-assistant-service/src/: __init__.py  auth.py  count_tokens.py  db.py  main.py  models.py  openai_utils.py  s3_logging.py  sf_case_creation.py  utils.py
shopaiassist-app-ai-assistant-service/src/skills_backend/chat_summarization/: summarize_chat.py
shopaiassist-app-ai-assistant-service/src/skills_backend/document_qa/: document_handler.py  xml_parser.py
shopaiassist-app-ai-assistant-service/src/skills_backend/document_qa/trlabs_smartPDFParser/: file_reader.py  layout_reader.py  simple_tokenizers.py
shopaiassist-app-ai-assistant-service/src/skills_backend/product_support/: product_support.py  stream_utils.py
shopaiassist-app-ai-assistant-service/tests/: __init__.py  test_auth.py  test_document_handler.py  test_main.py  test_utils.py
shopaiassist-app-ui-chatmanager-mfe/: .eslintrc.js  .gitignore  .prettierignore  .prettierrc  README.md  package.json  tsconfig.json
shopaiassist-app-ui-chatmanager-mfe/.husky/: pre-commit
shopaiassist-app-ui-chatmanager-mfe/client/: README.md  dev-server.js  jest-setup.ts  jest-utils.tsx  jest.config.ts  package.json  tsconfig.json  webpack.config.ts
shopaiassist-app-ui-chatmanager-mfe/client/.storybook/: i18next.ts  main.ts  preview.ts
shopaiassist-app-ui-chatmanager-mfe/client/__mocks__/: on.js
shopaiassist-app-ui-chatmanager-mfe/client/public/: index.html
shopaiassist-app-ui-chatmanager-mfe/client/src/: App.scss  App.tsx  bootstrap-test-config.tsx  bootstrap.tsx
shopaiassist-app-ui-chatmanager-mfe/client/tool/: cors-util.ts  public-env-vars.ts
shopaiassist-app-ui-chatmanager-mfe/doc/: db.md  troubleshooting.md
shopaiassist-app-ui-chatmanager-mfe/env/: ap-southeast-2-prod.env  eu-central-1-prod.env  eu-west-2-prod.env  us-east-1-dev.env  us-east-1-qa.env  us-east-1-sat.env  us-east-1-uat.env  us-west-2-prod.env
shopaiassist-app-ui-chatmanager-mfe/iac/: Dockerfile  start.sh
shopaiassist-app-ui-chatmanager-mfe/server/: app.ts  index.ts
shopaiassist-app-ui-container-app/: .eslintrc.js  .gitignore  .lintstagedrc  .prettierignore  .prettierrc  README.md  package.json  tsconfig.json
shopaiassist-app-ui-container-app/.husky/: pre-commit
shopaiassist-app-ui-container-app/client/: .npmrc  README.md  dev-server.js  jest-setup.ts  jest-utils.tsx  jest.config.ts  package.json  tsconfig.json  webpack.config.ts
shopaiassist-app-ui-container-app/client/.storybook/: i18next.ts  main.ts  preview.ts
shopaiassist-app-ui-container-app/client/__mocks__/: saffron.js  zustand.ts
shopaiassist-app-ui-container-app/client/public/: index.html  no-access.html
shopaiassist-app-ui-container-app/client/src/: App.scss  App.tsx  bootstrap.tsx
shopaiassist-app-ui-container-app/client/tool/: public-env-vars.ts
shopaiassist-app-ui-container-app/server/: app.ts  index.ts
(+261 files in other folders)
